--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,12 @@
 # Windows files
 [*.bat]
 end_of_line = crlf
+
+[*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_size = 2
+indent_style = space
+tab_width = 2
+trim_trailing_whitespace = true
