--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "eslint --ext .jsx,.js src",
+    "pre-commit": "npm run lint",
+    "pre-push": "npm test",
+    "post-merge": "npm install",
+    "post-rewrite": "npm install",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook"
   },
@@ -15,12 +19,14 @@
     "@storybook/react": "^6.3.8",
     "@types/react": "^17.0.21",
     "@types/react-native": "^0.65.0",
+    "eslint-import-resolver-custom-alias": "^1.2.0",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "^0.65.1",
     "react-native-dotenv": "^3.2.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -35,7 +41,11 @@
     "@storybook/react-native-server": "^5.3.23",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "eslint": "7.14.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react-native": "^3.11.0",
+    "husky": "^7.0.2",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
