--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "react-native-dotenv": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.17.1",
-    "react-scripts": "^4.0.3"
+    "react-redux": "^7.2.5",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
+    "redux-act": "^1.8.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
